_Source/force-app/main/default/objects/BI_Organizational_Plan__c/BI_Organizational_Plan__c.object-meta.xml
<CustomObject>
    <label>Organizational Plan</label>
    <nameField>
        <label>Organizational Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organizational Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>