_Source/force-app/main/default/objects/BI_Organizational_Plan__c/fields/BI_Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>BI_Mission_Statement__c</fullName>
    <label>Mission Statement</label>
    <type>TextArea</type>
</CustomField>