_Source/force-app/main/default/objects/BI_Organizational_Plan__c/fields/BI_Organization__c.field-meta.xml
<CustomField>
    <fullName>BI_Organization__c</fullName>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Organization</valueSetName>
    </valueSet>
</CustomField>