_Source/force-app/main/default/objects/BI_Organizational_Plan__c/fields/BI_Overarching_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Overarching_Strategy__c</fullName>
    <label>Overarching Strategy</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>