_Source/force-app/main/default/objects/BI_Organizational_Plan__c/listViews/All_Organizational_Plans.listView-meta.xml
<ListView>
    <fullName>All_Organizational_Plans</fullName>
    <columns>BI_Organizational_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>BI_Organization__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Organizational Plans</label>
</ListView>