_Source/force-app/main/default/objects/BI_Organizational_Plan__c/listViews/All_Organizational_Plans_International.listView-meta.xml
<ListView>
    <fullName>All_Organizational_Plans_International</fullName>
    <columns>BI_Organizational_Plan_Year__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>BI_Organization__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BI_Organization__c</field>
        <operation>equals</operation>
        <value>APAC,EMEAI,Latin America,International</value>
    </filters>
    <label>All Organizational Plans - International</label>
</ListView>